--- a/templates/userside/cart.html
+++ b/templates/userside/cart.html
@@ -716,7 +716,7 @@
 	                					</tbody>
 	                				</table><!-- End .table table-summary -->
 
-	                				<a href="{% url 'proceed' %}" class="btn btn-outline-primary-2 btn-order btn-block" >PROCEED TO CHECKOUT</a>
+	                				{% comment %} <a href="{% url 'proceed' %}" class="btn btn-outline-primary-2 btn-order btn-block" >PROCEED TO CHECKOUT</a> {% endcomment %}
 	                			</div><!-- End .summary -->%
 
 		            			<a href="category.html" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE SHOPPING</span><i class="icon-refresh"></i></a>
