--- a/templates/userside/otpp.html
+++ b/templates/userside/otpp.html
@@ -69,7 +69,7 @@
 <body>
     <div class="otp-container">
         <h2>Enter OTP</h2>
-        <form action="{% url 'otpverification' id=id %}" method="post">
+        <form action="{% url 'logintohome:otpverification' id=id %}" method="post">
             {% csrf_token %}
             <input name="otp" type="text" class="otp-input" placeholder="Enter OTP" >
         
