--- a/templates/customadmin/adminlogin.html
+++ b/templates/customadmin/adminlogin.html
@@ -60,7 +60,7 @@
                           
                           <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
                   
-                            <form style="width: 23rem;" method="post" action="{% url 'adminlogin'%}" >
+                            <form style="width: 23rem;" method="post" action="{% url 'adminside:adminlogin'%}" >
                             {% csrf_token %}
                   
                               <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Admin...log in</h3>
