--- a/templates/userside/home.html
+++ b/templates/userside/home.html
@@ -2016,7 +2016,7 @@
                                     </div><!-- End .form-choice -->
                                 </div><!-- .End .tab-pane -->
                                 <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
-                                    <form action="{% url 'logintohome:signup' %}" method="post"  >
+                                    <form action="{% url 'logintohome:signupp' %}" method="post"  >
                                         {% csrf_token %}
                                         <div class="form-group">
                                             <label for="register-username">Username*</label>
